--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -12,14 +12,27 @@
     <base href="/" />
 </head>
 <body>
+<script>
+    function deleteMeal(id) {
+        fetch('/meal/delete-from-order/' + id, {
+            credentials: "same-origin",
+            method: "delete"
+        })
+            .then((response)=> {
+                return response.text();
+            })
+            .then((data) => {
+                document.body.innerHTML = data;
+            });
+    }
+</script>
 <div th:insert="~{header.html}"></div>
 
 <h1>Your shopping basket:</h1>
-
-    <form action="#" method="post" >
+    <form method="post">
         <div th:each="order : ${orderList}" class="order">
             <div  style="display: flex">
-                <input name="ids" type="checkbox" th:value="${order.meal.id}">
+<!--                <input name="ids" type="checkbox" th:value="${order.meal.id}">-->
                 <div>
                     <img th:src="${'meal/admin/get-image/' + order.meal.name}" width="150">
                 </div>
@@ -29,6 +42,7 @@
                 <div style="padding: 10px">
                     <p id="price" th:text="${order.meal.price}+ ' $'"></p>
                 </div>
+                <button type="button" th:onclick="'javascript:deleteMeal(' + ${order.id} + ')'">X</button>
             </div>
         </div>
         <input type="submit" value="Pay">
